--- a/about.html
+++ b/about.html
@@ -309,7 +309,7 @@
             <h4 class="mb-15">Laurens van Roomen</h4>
             <div class="meta mb-5">Co-Founder EZ360 & A Lot More</div>
             <p>'Don't think about it. Do it.'</p>
-            <ul class="social social-s ml-auto">
+            <ul class="social social-s ml-auto mt-40">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
               <!-- <li><a href="http://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li> -->
@@ -324,7 +324,7 @@
             </h4>
             <div class="meta mb-5">Co-founder SustainableMotion</div>
             <p>‘Using the triple helix’</p>
-            <ul class="social social-s ml-auto">
+            <ul class="social social-s ml-auto mt-40">
               <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
             </ul>
@@ -337,7 +337,7 @@
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Soufiane Bouarfa
             </h4>
-            <div class="meta mb-5">Entrepreneur Future of Mobility</div>
+            <div class="meta mb-5">Assistant Professor & Entrepreneur Middle East</div>
             <p>‘Driving the future of mobility’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i
@@ -356,7 +356,7 @@
             </div>
             <p>'Energized by building relationships’
             </p>
-            <ul class="social social-s ml-auto">
+            <ul class="social social-s ml-auto mt-40">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
             </ul>
