--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Cato Bui</h4>
             <div class="meta mb-5">Agency Strategist & Startup Lead</div>
-            <p>'Valueable brand by a digital strategy’</p>
+            <p>'Valuable brand by a digital strategy’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/catobui/" target="_blank"><i class="jam jam-linkedin"></i></a>
               </li>
