--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             <blockquote class="icon">
               <p>"Startups are crucial, more than ever, to transform different industries. And private investors give
                 these startups the fuel that they need to accelerate."</p>
-              <footer class="blockquote-footer">Maurice van den Oever</footer>
+              <footer class="blockquote-footer">Maurice van den Oever (Founder NextCycle)</footer>
             </blockquote>
             <ul class="social social-s ml-auto text-center">
               <li><a href="https://www.linkedin.com/in/maurice-van-den-oever-235b6a50/" target="_blank"><i
