--- a/community/huurbuur.html
+++ b/community/huurbuur.html
@@ -134,10 +134,10 @@
                 </li>
                 <li>
                   <h5 class="mb-5">Annual Revenue</h5>
-                  <p>Expected revenue 2021-2022-2023
-                    2021: 250.000 euro
-                    2022: 650.000 euro
-                    2023: 1.750.000 euro
+                  <p>Verwachte omzet na 5 jaar bij 10, 20 en 50% Nederlands marktaandeel:</br>
+                    10%: €2.543.949
+                    20%: €5.087.899
+                    50%: €12.719.746
                   </p>
                 </li>
                 <li>
@@ -153,21 +153,26 @@
           <div class="row no-gutters">
             <ul class="progress-list">
               <li>
-                <p>€350.000 / 600.000 goal</p>
-                <div class="progressbar line blue" data-value="58"></div>
+                <p>€0 / 150.000 goal</p>
+                <div class="progressbar line blue" data-value="0"></div>
               </li>
             </ul>
           </div>
           <!--/.row -->
 
           <p>Strenghts/ Weaknesses</p>
-          <span class="badge badge-pill badge-success">Worldwide patent</span>
-          <span class="badge badge-pill badge-success">Licensing business model</span>
-          <span class="badge badge-pill badge-success">Scalability</span>
-          <span class="badge badge-pill badge-success">New experienced team of entrepreneurs</span>
-          <span class="badge badge-pill badge-danger">Not yet industrialized</span>
-          <span class="badge badge-pill badge-danger">No revenue yet</span>
-          <span class="badge badge-pill badge-danger">Patent dates from 2007</span>
+          <span class="badge badge-pill badge-success">Gemotiveerd en gekwalificeerd team</span>
+          <span class="badge badge-pill badge-success">Grote kennis van de markt en platforms</span>
+          <span class="badge badge-pill badge-success">Groot netwerk aan adviseurs</span>
+          <span class="badge badge-pill badge-success">Visueel sterk platform</span>
+          <span class="badge badge-pill badge-success">Technische schaalbaarheid</span>
+          <span class="badge badge-pill badge-success">First mover advantage</span>
+          <span class="badge badge-pill badge-success">Lage kosten naast marketinguitgaven</span>
+          <span class="badge badge-pill badge-danger">Weinig data beschikbaar</span>
+          <span class="badge badge-pill badge-danger">Nog niet winstgevend</span>
+          <span class="badge badge-pill badge-danger">Hoge marketingkosten</span>
+          <span class="badge badge-pill badge-danger">Veel verkeer nodig voor winstgevendheid</span>
+          <span class="badge badge-pill badge-danger">Covid-19 maatregels</span>
 
 
 
