--- a/community/huurbuur.html
+++ b/community/huurbuur.html
@@ -91,7 +91,7 @@
 
   </div>
   <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text"
-    data-image-src="../style/images/nextcycle/startups/capss/bg.jpg">
+    data-image-src="../style/images/nextcycle/startups/huurbuur/bg.jpg">
     <div class="container inner text-center">
       <div class="space90"></div>
       <h1 class="page-title">Huurbuur</h1>
@@ -117,7 +117,7 @@
 
             <!--/column -->
             <div class="col-md-2 ml-auto">
-              <img src="..\style\images\nextcycle\startups/capss/logo.png" class="img-fluid"
+              <img src="..\style\images\nextcycle\startups/huurbuur/logo.png" class="img-fluid"
                 style="padding-bottom: 20px;" alt="logo">
               <ul class="list-unstyled">
                 <li>
@@ -187,10 +187,9 @@
         <div class="carousel owl-carousel" data-margin="30" data-dots="true" data-autoplay="false"
           data-autoplay-timeout="5000"
           data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "1441":{"items": "3"}}'>
-          <div class="item"><img src="../style/images/nextcycle/startups/capss/1.jpg" alt="" /></div>
-          <div class="item"><img src="../style/images/nextcycle/startups/capss/2.jpg" alt="" /></div>
-          <div class="item"><img src="../style/images/nextcycle/startups/capss/3.jpg" alt="" /></div>
-          <div class="item"><img src="../style/images/nextcycle/startups/capss/4.jpg" alt="" /></div>
+          <div class="item"><img src="../style/images/nextcycle/startups/huurbuur/1.jpg" alt="" /></div>
+          <div class="item"><img src="../style/images/nextcycle/startups/huurbuur/2.jpg" alt="" /></div>
+          <div class="item"><img src="../style/images/nextcycle/startups/huurbuur/3.jpg" alt="" /></div>
         </div>
         <!-- /.owl-carousel -->
         <div class="space140"></div>
