huurbuur op index

--- a/community/huurbuur.html
+++ b/community/huurbuur.html
@@ -94,7 +94,7 @@
     data-image-src="../style/images/nextcycle/startups/huurbuur/bg.jpg">
     <div class="container inner text-center">
       <div class="space90"></div>
-      <h1 class="page-title">Huurbuur</h1>
+      <h1 class="page-title">HuurBuur</h1>
       <p class="lead">HuurBuur is gecreëerd om voor iedereen het leven toegankelijker te maken, in een maatschappij met veel obstakels.</p>
     </div>
     <!-- /.container -->
