--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                   <img src="style\images\nextcycle\logo_ez360_2019_200x47.png" class="img-fluid"
                     style="padding-bottom: 20px;" alt="EZ360 logo">
                   <h5 class="mb-15">EZ360 VR Player</h5>
-                  <div class="meta mb-10">Next Living</div>
+                  <div class="meta mb-10">Next Technology</div>
                   <p class="mb-10">The #1 solution for easy distribution, management and playback of Virtual Reality
                     content.
                   </p>
@@ -623,15 +623,14 @@
             <div class="item">
               <div class="item-inner">
                 <div class="box bg-white shadow">
-                  <img src="style\images\nextcycle\logo_ez360_2019_200x47.png" class="img-fluid"
+                  <img src="style\images\nextcycle\startups\huurbuur\logo.png" class="img-fluid"
                     style="padding-bottom: 20px;" alt="EZ360 logo">
-                  <h5 class="mb-15">EZ360 VR Player</h5>
+                  <h5 class="mb-15">HuurBuur</h5>
                   <div class="meta mb-10">Next Living</div>
-                  <p class="mb-10">The #1 solution for easy distribution, management and playback of Virtual Reality
-                    content.
+                  <p class="mb-10">Het leven voor iedereen toegankelijker te maken, in een maatschappij met veel obstakels.
                   </p>
                   <ul class="social social-s ml-auto mb-10">
-                    <li><a href="ez360.html"><i class="icofont-link"></i></a></li>
+                    <li><a href="/community/huurbuur.html"><i class="icofont-link"></i></a></li>
                   </ul>
                 </div>
                 <!--/.box -->
