--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -159,9 +159,9 @@
                 </li>
                 <li>
                   <h5 class="mb-5">Annual Revenue</h5>
-                  <p>Expected revenue 2021-2022-2023
-                    2021: 250.000 euro
-                    2022: 650.000 euro
+                  <p>Expected revenue 2021-2022-2023</br>
+                    2021: 250.000 euro</br>
+                    2022: 650.000 euro</br>
                     2023: 1.750.000 euro
                   </p>
                 </li>
@@ -224,7 +224,7 @@
     <div class="container inner">
       <h2 class="section-title text-center">Other Startups</h2>
       <div class="grid-view boxed light-gallery-wrapper text-center">
-        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-autoplay="true"
+        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-loop="true" data-autoplay="true"
           data-autoplay-timeout="5000"
           data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "992":{"items": "3"}}'>
 
