--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -201,7 +201,7 @@
     <div class="container inner">
       <h2 class="section-title text-center">Other Startups</h2>
       <div class="grid-view boxed light-gallery-wrapper text-center">
-        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-autoplay="true"
+        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-loop="true" data-autoplay="true"
           data-autoplay-timeout="5000"
           data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "992":{"items": "3"}}'>
 
