--- a/community/huurbuur.html
+++ b/community/huurbuur.html
@@ -135,8 +135,8 @@
                 <li>
                   <h5 class="mb-5">Annual Revenue</h5>
                   <p>Verwachte omzet na 5 jaar bij 10, 20 en 50% Nederlands marktaandeel:</br>
-                    10%: €2.543.949
-                    20%: €5.087.899
+                    10%: €2.543.949</br>
+                    20%: €5.087.899</br>
                     50%: €12.719.746
                   </p>
                 </li>
@@ -203,7 +203,7 @@
     <div class="container inner">
       <h2 class="section-title text-center">Other Startups</h2>
       <div class="grid-view boxed light-gallery-wrapper text-center">
-        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-autoplay="true"
+        <div class="carousel owl-carousel gap-small" data-margin="0" data-dots="true" data-loop="true" data-autoplay="true"
           data-autoplay-timeout="5000"
           data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "992":{"items": "3"}}'>
 
