--- a/community/huurbuur.html
+++ b/community/huurbuur.html
@@ -134,10 +134,11 @@
                 </li>
                 <li>
                   <h5 class="mb-5">Annual Revenue</h5>
-                  <p>Verwachte omzet na 5 jaar bij 10, 20 en 50% Nederlands marktaandeel (verdienmodel commissie):</br>
+                  <p>Verwachte omzet na 5 jaar bij 10, 20 en 50% Nederlands marktaandeel</br>
                     10%: €2.543.949</br>
                     20%: €5.087.899</br>
                     50%: €12.719.746</br>
+                  </br>
                     Verwachte omzet na 5 jaar met opschaling naar buitenland en overige verdienmodellen:</br>
                     100/200 miljoen
                   </p>
