--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="style/images/favicon.png">
   <title>NextCycle</title>
+  <meta name="description" content="We connect startups with experts to accelerate the next innovation cycle & attract private investors to realize the next investment cycle">
   <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
