--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar wide bg-white shadow navbar-expand-lg nav-uppercase">
       <div class="container-fluid flex-row justify-content-center">
         <div class="navbar-brand"><a href="index.html"><img src="#"
-              srcset="style\images\nextcycle\logo.png 1x, style\images\nextcycle\logo@2x.png 2x" alt="" /></a></div>
+              srcset="style\images\nextcycle\logo.png 1x, style\images\nextcycle\logo@2x.png 2x" alt="logo nextcycle" /></a></div>
         <div class="navbar-other ml-auto order-lg-3">
           <ul class="navbar-nav flex-row align-items-center" data-sm-skip="true">
             <li class="nav-item">
@@ -49,7 +49,7 @@
           <div class="offcanvas-header d-lg-none d-xl-none">
             <a href="index.html"><img src="#"
                 srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x"
-                alt="" /></a>
+                alt="logo nextcycle" /></a>
             <button class="plain offcanvas-close offcanvas-nav-close"><i class="jam jam-close"></i></button>
           </div>
           <ul class="navbar-nav mx-auto">
@@ -126,7 +126,7 @@
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt="House icon"></div>
               <h5>Next Living</h5>
               <p>The way how we live in and around our homes is changing.</p></br>
               <a href="impact-areas.html#next-living" class="btn btn-s btn-default">Read More</a>
@@ -138,7 +138,7 @@
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt="Retail icon"></div>
               <h5>Next Retail</h5>
               <p>The retail industry is changing rapidly in order to keep up with consumer demands.</p>
               <a href="impact-areas.html#next-retail" class="btn btn-s btn-default">Read More</a>
@@ -149,7 +149,7 @@
 
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt="Startup icon"></div>
               <h5>Next Technology</h5>
               <p>Technology has become crucial for tackling the challenges we are facing.</p></br>
               <a href="impact-areas.html#next-technology" class="btn btn-s btn-default">Read More</a>
@@ -160,7 +160,7 @@
 
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt="Manufacturing"></div>
               <h5>Next Manufacturing
               </h5>
               <p>Production of goods and products is becoming more sustainable and transparent.</p>
@@ -308,7 +308,7 @@
                   <div class="pricing panel box bg-white shadow">
                     <div class="panel-heading">
                       <div class="prices color-dark">
-                        <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+                        <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt="startup icon"></div>
                       </div>
                       <h4 class="panel-title mb-0">Accelerate</h4>
                       <p class="mb-0">
@@ -345,7 +345,7 @@
                         <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">9</span> <span class="price-duration">month</span></div>
                     <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">99</span> <span class="price-duration">year</span></div> -->
 
-                        <div class="icon icon-svg mb-20"><img src="style/images/icons/sm-management.png" alt=""></div>
+                        <div class="icon icon-svg mb-20"><img src="style/images/icons/sm-management.png" alt="Connect icon"></div>
                       </div>
                       <h4 class="panel-title mb-0">Connect</h4>
                       <p class="mb-0">
@@ -381,7 +381,7 @@
                   <div class="pricing panel box bg-white shadow">
                     <div class="panel-heading">
                       <div class="prices color-dark">
-                        <div class="icon icon-svg mb-20"><img src="style/images/icons/st-handshake.png" alt=""></div>
+                        <div class="icon icon-svg mb-20"><img src="style/images/icons/st-handshake.png" alt="Invest icon"></div>
                       </div>
                       <h4 class="panel-title mb-0">Invest</h4>
                       <p class="mb-0">
@@ -432,7 +432,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2 text-center">
             <figure><img src="#"
-                srcset="style/images/concept/concept17.png 1x, style/images/concept/concept17@2x.png 2x" alt="" />
+                srcset="style/images/concept/concept17.png 1x, style/images/concept/concept17@2x.png 2x" alt="concept icon" />
             </figure>
           </div>
           <!--/column -->
@@ -809,7 +809,7 @@
   <footer class="dark-wrapper inverse-text text-center">
     <div class="container inner pt-80 pb-80">
       <div class="widget"> <img src="#"
-          srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="" />
+          srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="Nextcycle logo" />
         <div class="space30"></div>
         <p><a href="mailto:info@nextcycle.com" class="nocolor">info@nextcycle.com</a></p>
         <p>© 2020 NextCycle. All rights reserved. NextCycle is part of Mavidan.</p>
