--- a/impact-areas.html
+++ b/impact-areas.html
@@ -15,6 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="style/images/favicon.png">
   <title>NextCycle | Impact Areas</title>
+  <meta name="description" content="Read about the Impact Areas we focus on: Next Living, Next Retail, Next Technology, Next Manufacturing">
   <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
