--- a/about.html
+++ b/about.html
@@ -487,11 +487,10 @@
         <path d="M1070,39.07H0V21a6818.1,6818.1,0,0,1,1070,0Z"></path>
       </svg></div>
 
-    <footer class="dark-wrapper inverse-text text-center">
-
-      <div class="container inner pt-80 pb-80">
-        <div class="widget"> <img src="#"
-            srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="" />
+  <footer class="dark-wrapper inverse-text text-center">
+    <div class="container inner pt-80 pb-80">
+      <div class="widget"> <img src="#"
+          srcset="style\images\nextcycle\logo-light-ver.png 1x, style\images\nextcycle\logo-light-ver@2x.png 2x" alt="" />
           <div class="space30"></div>
           <p><a href="mailto:info@nextcycle.com" class="nocolor">info@nextcycle.com</a></p>
           <p>© <script>document.write(new Date().getFullYear())</script> NextCycle. All rights reserved. NextCycle is part of Mavidan.</p>
