--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <div class="img-blob blob8 mb-30"><img src="style\images\nextcycle\maurice-van-den-oever.jpg"
+            <div class="img-blob blob8 mb-30"><img src="style\images\nextcycle\maurice-van-den-oever2.jpg"
                 style="width: 25rem" alt="Maurice van den Oever" /></div>
             <blockquote class="icon">
               <p>"Startups are crucial, more than ever, to transform different industries. And private investors give
@@ -133,7 +133,7 @@
               </div>
               <!--/column -->
               <div class="col-md-4">
-                <h3 class="color-dark">€<span class="value">350</span>+</h3>
+                <h3 class="color-dark">€<span class="value">350k</span>+</h3>
                 <p>Impact Investments</p>
               </div>
               <!--/column -->
@@ -194,17 +194,17 @@
           </div>
           <!--/column -->
           <div class="col-md-3">
-            <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/jordi-van-den-bussche.jpg"
+            <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/amy-ryan.jpg"
                 style="width: 10rem" alt="" /></figure>
-            <h4 class="mb-15">Jordi van den Bussche
+            <h4 class="mb-15">Amy Ryan
             </h4>
-            <div class="meta mb-5">Nr. 1 Youtuber in The Netherlands
+            <div class="meta mb-5">Co-Founder / CEO at ESG Strategies
             </div>
-            <p>‘Drive for being number one’
+            <p>‘Empower with your own ESG Story’
             </p>
             <ul class="social social-s ml-auto">
-              <li><a href="https://www.youtube.com/user/kwebbelkop?hl=nl&gl=NL" target="_blank"><i
-                    class="jam jam-youtube"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/amylryanremcea/" target="_blank"><i class="jam jam-linkedin"></i></a>
+              </li>
             </ul>
           </div>
           <!--/column -->
