--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
                         <tr>
                           <td>Formulation of a 5-year <strong>development plan</strong></td>
                         </tr>
+                        <tr>
+                          <td><strong>Investor deck</strong></td>
+                        </tr>
 
 
 
@@ -544,7 +547,7 @@
               </div>
               <!--/column -->
               <div class="col-md-6 color-default">
-                <h3 class="color-default">€<span class="value">350</span>+</h3>
+                <h3 class="color-default">€<span class="value">350k</span>+</h3>
                 <p>Impact Investments</p>
               </div>
               <!--/column -->
