--- a/impact-areas.html
+++ b/impact-areas.html
@@ -229,7 +229,7 @@
           <!--/column -->
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob2"><img src="style/images/nextcycle/living.jpg" style="width: 20rem" alt="" />
+            <div class="img-blob blob2"><img src="style/images/nextcycle/living2.jpg" style="width: 600px" alt="living" />
             </div>
           </div>
           <!--/column -->
@@ -251,7 +251,7 @@
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob8"><img src="style/images/nextcycle/food.jpg" style="width: 20rem" alt="" /></div>
+            <div class="img-blob blob8"><img src="style/images/nextcycle/food.jpg" style="width: 600px" alt="" /></div>
           </div>
           <!--/column -->
           <div class="space30 d-none d-md-block d-lg-none"></div>
@@ -323,7 +323,7 @@
           <!--/column -->
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob10"><img src="style/images/nextcycle/tech.jpg" style="width: 20rem" alt="" />
+            <div class="img-blob blob10"><img src="style/images/nextcycle/tech.jpg" style="width: 600px" alt="" />
             </div>
           </div>
           <!--/column -->
@@ -343,7 +343,7 @@
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob8"><img src="style/images/nextcycle/construction.jpg" style="width: 20rem"
+            <div class="img-blob blob8"><img src="style/images/nextcycle/construction.jpg" style="width: 400px"
                 alt="" /></div>
           </div>
           <!--/column -->
