update foto maurice en amy

--- a/community/big-rock-technologies.html
+++ b/community/big-rock-technologies.html
@@ -115,7 +115,7 @@
             <!--/column -->
             <div class="col-md-2 ml-auto">
               <img src="..\style\images\nextcycle\startups\bigrocktechnologies\logo.jpg" class="img-fluid"
-                style="padding-bottom: 20px;" alt="EZ360 logo">
+                style="padding-bottom: 20px;" alt="Big Rock Technologies logo">
               <ul class="list-unstyled">
                 <li>
                   <h5 class="mb-5">Founders</h5>
