--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
               </div>
               <!--/column -->
               <div class="col-md-4">
-                <h3 class="color-dark">€<span class="value">350k</span>+</h3>
+                <h3 class="color-dark">€<span class="value">350</span>k+</h3>
                 <p>Impact Investments</p>
               </div>
               <!--/column -->
