--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               </div>
               <!--/column -->
               <div class="col-md-6 color-default">
-                <h3 class="color-default">€<span class="value">350k</span>+</h3>
+                <h3 class="color-default">€<span class="value">350</span>k+</h3>
                 <p>Impact Investments</p>
               </div>
               <!--/column -->
