--- a/index.html
+++ b/index.html
@@ -628,13 +628,31 @@
               <div class="item-inner">
                 <div class="box bg-white shadow">
                   <img src="style\images\nextcycle\startups\huurbuur\logo.png" class="img-fluid"
-                    style="padding-bottom: 20px;" alt="EZ360 logo">
+                    style="padding-bottom: 20px;" alt="Huurbuur logo">
                   <h5 class="mb-15">HuurBuur</h5>
                   <div class="meta mb-10">Next Living</div>
                   <p class="mb-10">Het leven voor iedereen toegankelijker te maken, in een maatschappij met veel obstakels.
                   </p>
                   <ul class="social social-s ml-auto mb-10">
                     <li><a href="/community/huurbuur.html"><i class="icofont-link"></i></a></li>
+                  </ul>
+                </div>
+                <!--/.box -->
+              </div>
+              <!--/.item-inner -->
+            </div>
+            <!--/.item -->
+            <div class="item">
+              <div class="item-inner">
+                <div class="box bg-white shadow">
+                  <img src="style\images\nextcycle\startups\bigrocktechnologies\logo2.jpg" class="img-fluid"
+                    style="padding-bottom: 20px;" alt="bigrocktechnologies logo">
+                  <h5 class="mb-15">Big Rock Technologies</h5>
+                  <div class="meta mb-10">Next Technology</div>
+                  <p class="mb-10">Design a user friendly standardized security platform for all drone models
+                  </p>
+                  <ul class="social social-s ml-auto mb-10">
+                    <li><a href="/community/big-rock-technologies.html"><i class="icofont-link"></i></a></li>
                   </ul>
                 </div>
                 <!--/.box -->
